spacing fix?

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -117,7 +117,7 @@ footer a:hover {
 
 footer p {
     font-size: 1.2em;
-    color
+    color:#96E8BC;
 }
 
 footer p a:hover {
